// Jest Snapshot v1, https://vijs.io/docs/snapshot-testing

exports[`renderer/components/fields/Checkbox.tsx should render - disabled 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          checked=""
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          disabled=""
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer line-through"
          for="appearance"
        >
          Appearance
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - not visible 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    />
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - positive counter selected 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          checked=""
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer"
          for="appearance"
        >
          Appearance
        </label>
        <span
          class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-primary prc-Text-Text-9mHv3"
        >
          5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - positive counter unselected 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer"
          for="appearance"
        >
          Appearance
        </label>
        <span
          class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-secondary prc-Text-Text-9mHv3"
        >
          5
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - tooltip 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          checked=""
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer"
          for="appearance"
        >
          Appearance
        </label>
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="tooltip-appearance"
          data-testid="tooltip-icon-tooltip-appearance"
          id="tooltip-appearance"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="octicon octicon-question text-gitify-tooltip-icon"
            display="inline-block"
            fill="currentColor"
            focusable="false"
            height="16"
            overflow="visible"
            style="vertical-align: text-bottom;"
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8Zm8-6.5a6.5 6.5 0 1 0 0 13 6.5 6.5 0 0 0 0-13ZM6.92 6.085h.001a.749.749 0 1 1-1.342-.67c.169-.339.436-.701.849-.977C6.845 4.16 7.369 4 8 4a2.756 2.756 0 0 1 1.637.525c.503.377.863.965.863 1.725 0 .448-.115.83-.329 1.15-.205.307-.47.513-.692.662-.109.072-.22.138-.313.195l-.006.004a6.24 6.24 0 0 0-.26.16.952.952 0 0 0-.276.245.75.75 0 0 1-1.248-.832c.184-.264.42-.489.692-.661.103-.067.207-.132.313-.195l.007-.004c.1-.061.182-.11.258-.161a.969.969 0 0 0 .277-.245C8.96 6.514 9 6.427 9 6.25a.612.612 0 0 0-.262-.525A1.27 1.27 0 0 0 8 5.5c-.369 0-.595.09-.74.187a1.01 1.01 0 0 0-.34.398ZM9 11a1 1 0 1 1-2 0 1 1 0 0 1 2 0Z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - visible 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          checked=""
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer"
          for="appearance"
        >
          Appearance
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`renderer/components/fields/Checkbox.tsx should render - zero counter 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <div
        class="text-sm prc-Stack-Stack-UQ9k6"
        data-align="center"
        data-direction="horizontal"
        data-gap="condensed"
        data-justify="start"
        data-padding="none"
        data-wrap="nowrap"
      >
        <input
          checked=""
          class="size-4 rounded-sm cursor-pointer"
          data-testid="checkbox-appearance"
          id="appearance"
          type="checkbox"
        />
        <label
          class="font-medium text-gitify-font cursor-pointer"
          for="appearance"
        >
          Appearance
        </label>
        <span
          class="px-2 py-0.25 rounded-full text-[10px] font-medium leading-none min-w-[16px] text-gitify-counter-text bg-gitify-counter-primary prc-Text-Text-9mHv3"
        >
          0
        </span>
      </div>
    </div>
  </div>
</div>
`;
